[gd_scene load_steps=2 format=3 uid="uid://1malajsj05pg"]

[ext_resource type="Script" path="res://Code/Scenes/Menus/optionsMenu.gd" id="1_ybfn7"]

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 1
scale = Vector2(0.95, 0.95)
transform = Transform2D(0.95, 0, 0, 0.95, 0, 0)
script = ExtResource("1_ybfn7")

[node name="Main" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.5
offset_top = -360.0
offset_right = 389.5
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBox" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Main/VBox"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Main/VBox"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBox/Title"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Title/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]OPTIONS"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Main/VBox/Title/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][i]Use Keyboard to navigate Menu[/i]"
scroll_active = false

[node name="Audio" type="MarginContainer" parent="Main/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="IndvOptions" type="VBoxContainer" parent="Main/VBox/Audio"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="PanelContainer" parent="Main/VBox/Audio/IndvOptions"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/Title"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]AUDIO MIXING"

[node name="Tests" type="HBoxContainer" parent="Main/VBox/Audio/IndvOptions"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Music" type="Button" parent="Main/VBox/Audio/IndvOptions/Tests"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Test Music"

[node name="SFX" type="Button" parent="Main/VBox/Audio/IndvOptions/Tests"]
layout_mode = 2
text = "Test SFX"

[node name="AudioOptions" type="MarginContainer" parent="Main/VBox/Audio/IndvOptions"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="GridContainer" type="GridContainer" parent="Main/VBox/Audio/IndvOptions/AudioOptions"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
value = 100.0

[node name="MasterText" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="RichTextLabel3" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Music
Volume"

[node name="MusicSlider" type="HSlider" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="MusicText" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="RichTextLabel5" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "SFX
Volume"

[node name="SFXSlider" type="HSlider" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="SFXText" type="RichTextLabel" parent="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="Controls" type="MarginContainer" parent="Main/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Main/VBox/Controls"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Main/VBox/Controls/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Title"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]CONTROL REMAPPING"

[node name="InputType" type="MarginContainer" parent="Main/VBox/Controls/VBox"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBox/Controls/VBox/InputType"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="OptionButton" type="OptionButton" parent="Main/VBox/Controls/VBox/InputType/HBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_horizontal = 4
item_count = 2
selected = 0
popup/item_0/text = "Keyboard"
popup/item_0/id = 0
popup/item_1/text = "GamePad"
popup/item_1/id = 1

[node name="Reset" type="Button" parent="Main/VBox/Controls/VBox/InputType/HBoxContainer"]
layout_mode = 2
text = "Reset Buttons"

[node name="Buttons" type="GridContainer" parent="Main/VBox/Controls/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 10
columns = 2

[node name="ui_up" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_up"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Up"
scroll_active = false

[node name="ui_up" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_up"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="ui_accept" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_accept"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Accept"
scroll_active = false

[node name="ui_accept" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_accept"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="ui_left" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_left"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Left"
scroll_active = false

[node name="ui_left" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_left"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="ui_cancel" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_cancel"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Cancel"
scroll_active = false

[node name="ui_cancel" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_cancel"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
toggle_mode = true
text = "Current Input"

[node name="ui_down" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_down"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Down"
scroll_active = false

[node name="ui_down" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_down"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="Flip" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/Flip"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Flip"
scroll_active = false

[node name="Flip" type="Button" parent="Main/VBox/Controls/VBox/Buttons/Flip"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
toggle_mode = true
text = "Current Input"

[node name="ui_right" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/ui_right"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Right
"
scroll_active = false

[node name="ui_right" type="Button" parent="Main/VBox/Controls/VBox/Buttons/ui_right"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="Break" type="HBoxContainer" parent="Main/VBox/Controls/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBox/Controls/VBox/Buttons/Break"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_vertical = 4
text = "Break"
scroll_active = false

[node name="Break" type="Button" parent="Main/VBox/Controls/VBox/Buttons/Break"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
toggle_mode = true
text = "Current Input"

[node name="Exit" type="Button" parent="Main/VBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Exit
"

[node name="MarginContainer2" type="MarginContainer" parent="Main/VBox"]
layout_mode = 2

[node name="Awaiting" type="PanelContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.363
anchor_right = 0.844
anchor_bottom = 0.776
offset_left = -0.0750122
offset_top = -0.140015
offset_right = -0.100098
offset_bottom = -0.280029

[node name="RichTextLabel" type="RichTextLabel" parent="Awaiting"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]...Awaiting Input...[/center]"

[connection signal="toggled" from="Main/VBox/Audio/IndvOptions/Tests/Music" to="." method="_on_music_toggled"]
[connection signal="pressed" from="Main/VBox/Audio/IndvOptions/Tests/SFX" to="." method="_on_sfx_pressed"]
[connection signal="value_changed" from="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer/MasterSlider" to="." method="audioSet" binds= [0]]
[connection signal="value_changed" from="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer/MusicSlider" to="." method="audioSet" binds= [1]]
[connection signal="value_changed" from="Main/VBox/Audio/IndvOptions/AudioOptions/GridContainer/SFXSlider" to="." method="audioSet" binds= [2]]
[connection signal="item_selected" from="Main/VBox/Controls/VBox/InputType/HBoxContainer/OptionButton" to="." method="_on_new_input_type_selected"]
[connection signal="pressed" from="Main/VBox/Controls/VBox/InputType/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_up/ui_up" to="." method="controllerMapStart" binds= [0]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_accept/ui_accept" to="." method="controllerMapStart" binds= [1]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_left/ui_left" to="." method="controllerMapStart" binds= [2]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_cancel/ui_cancel" to="." method="controllerMapStart" binds= [3]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_down/ui_down" to="." method="controllerMapStart" binds= [4]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/Flip/Flip" to="." method="controllerMapStart" binds= [5]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/ui_right/ui_right" to="." method="controllerMapStart" binds= [6]]
[connection signal="toggled" from="Main/VBox/Controls/VBox/Buttons/Break/Break" to="." method="controllerMapStart" binds= [7]]
[connection signal="pressed" from="Main/VBox/Exit" to="." method="_on_button_pressed"]
